--- a/src/pages/reward-new/index.css
+++ b/src/pages/reward-new/index.css
@@ -92,7 +92,7 @@
   .title-heading {
   font-size: 17px;
   overflow: hidden;
-  line-height: 25px;
+  line-height: 1.1;
   word-wrap: break-word;
 }
 #reward-points-container
@@ -104,6 +104,7 @@
   color: #333;
   font-family: 'Poppins-bold' !important;
   display: block;
+  padding: 3px 0px 10px 0px;
 }
 #reward-points-container
   .reward-point-merge-panel
