--- a/src/components/iframe/product-listing/index.css
+++ b/src/components/iframe/product-listing/index.css
@@ -34,3 +34,9 @@
 .MuiTabs-root .Mui-disabled {
   display: none;
 }
+
+@media (max-width: 464px) {
+  .react-multi-carousel-track > li:only-child {
+    transform: translate3d(-50px, 0px, 0px) !important;
+  }
+}
