--- a/src/components/rewards/rewards.css
+++ b/src/components/rewards/rewards.css
@@ -3,31 +3,33 @@
   margin: 20px 0px;
 }
 .rewards .label {
-  border: 1px solid #0075BF;
+  border: 1px solid #0075bf;
   padding: 20px;
 }
 .choose-reward .choose-btn {
   min-height: 150px;
   background: white;
   box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.2) !important;
-  margin: 0px 15px 30px 0;
-  min-width: 45% !important;
-  width: 45% !important;
+  margin: 0px 15px 20px 0;
+  min-width: 30% !important;
+  width: 30% !important;
   border: 1px solid #e4e4e4;
+  height: inherit;
+  align-items: flex-start;
 }
 .choose-reward .apply-reward {
-  display: inline-block !important;
+  display: flex !important;
+  flex-wrap: wrap;
 }
 .choose-reward .choose-btn img {
-  width: 85%;
+  width: 100%;
 }
 .choose-reward .choose-btn .align-item {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
 }
 .choose-reward .choose-btn .icon-content {
   align-items: center;
-  max-height: 100px;
   display: -webkit-box;
   min-height: 25px;
   -webkit-line-clamp: 3;
@@ -40,13 +42,18 @@
   font-size: 18px !important;
   text-transform: capitalize;
   text-align: left;
+  font-family: 'Poppins-Medium', sans-serif !important;
+  color: #2b4b62;
+  display: flex;
+  padding-bottom: 5px;
+  line-height: 22px;
 }
 .choose-reward .choose-btn.Mui-selected {
-  border: 2px solid #0073BD !important;
+  border: 2px solid #0073bd !important;
   background: transparent;
 }
 .choose-reward .choose-btn.Mui-selected:after {
-  content: " ";
+  content: ' ';
   display: block;
   width: 10px;
   height: 22px;
@@ -55,42 +62,67 @@
   position: absolute;
   left: 50%;
   top: 50%;
-  margin-top: -5%;
   transform: rotate(45deg);
-  margin-left: -31%;
+  margin-top: -4%;
+  margin-left: -30.8%;
 }
 .choose-reward .choose-btn.Mui-selected:before {
-  content: " ";
+  content: ' ';
   display: block;
-  border: solid 25px #0073BD;
+  border: solid 25px #0073bd;
   border-radius: 45px;
   height: 0px;
   width: 0px;
   position: absolute;
-  left: 50%;
+  left: 50%;  
   top: 50%;
   margin-top: -8%;
   margin-left: -37%;
 }
+.choose-reward .choose-btn .apply-button {
+  margin: 0;
+  line-height: 20px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-family: 'Poppins-Bold', sans-serif !important;
+  color: #0075bf;
+  font-size: 15px;
+  font-weight: 600;
+  cursor: pointer;
+}
+.choose-reward .choose-btn .expire,
+.choose-reward .choose-btn .points {
+  font-size: 12px !important;
+  color: #333;
+  font-family: 'Poppins-Medium' !important;
+  display: block;
+}
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1024px) {
   .choose-reward .choose-btn.Mui-selected:after {
-    margin-top: -5%;
-    margin-left: -32%;
+    margin-top: -6%;
+    margin-left: -32.5%;
   }
   .choose-reward .choose-btn {
     margin-top: 20px;
     width: 47% !important;
-    margin-right: 40px;
+    margin: 0 15px 15px 0;
   }
-  .choose-reward .choose-btn:nth-child(2),
+  /* .choose-reward .choose-btn:nth-child(2),
   .choose-reward .choose-btn:nth-child(4),
   .choose-reward .choose-btn:nth-child(6){
     margin-right: 0px;
-  }
+  } */
 }
 
 @media screen and (max-width: 600px) {
+  .choose-reward .choose-btn .apply-button {
+    display: none;
+  }
+  .choose-reward .choose-btn p {
+    font-size: 16px !important;
+    padding-bottom: 0px;
+  }
   .choose-reward .MuiToggleButtonGroup-root {
     display: flex;
     flex-direction: column;
@@ -106,16 +138,19 @@
   .choose-reward .choose-btn .icon-content {
     justify-content: center;
   }
+  .choose-reward .choose-btn {
+    min-height: 72px;
+  }
   .choose-reward .choose-btn.Mui-selected:before {
-    margin-top: -15%;
-    margin-left: -13%;
-    border: solid 37px #0073BD;
+    margin-top: -11%;
+    margin-left: 24%;
+    border: solid 30px #0073bd;
   }
   .choose-reward .choose-btn.Mui-selected:after {
-    margin-top: -10%;
-    margin-left: -4%;
-    width: 14px;
-    height: 32px;
+    margin-top: -7%;
+    margin-left: 32%;
+    width: 11px;
+    height: 26px;
   }
 }
 
@@ -193,26 +228,26 @@
   text-align: left;
 }
 #reward-points-container
-.reward-point-merge-panel
-.content-panel
-.img-panel
-img {
+  .reward-point-merge-panel
+  .content-panel
+  .img-panel
+  img {
   display: block;
   width: 100%;
 }
 #reward-points-container
-.reward-point-merge-panel
-.content-panel
-.content-panel-desc {
+  .reward-point-merge-panel
+  .content-panel
+  .content-panel-desc {
   padding-left: 15px;
   position: relative;
   height: inherit;
 }
 #reward-points-container
-.reward-point-merge-panel
-.content-panel
-.content-panel-desc
-.title-heading {
+  .reward-point-merge-panel
+  .content-panel
+  .content-panel-desc
+  .title-heading {
   max-height: 55px;
   font-size: 17px;
   overflow: hidden;
@@ -220,20 +255,20 @@ img {
   word-wrap: break-word;
 }
 #reward-points-container
-.reward-point-merge-panel
-.content-panel
-.content-panel-desc
-.expire {
+  .reward-point-merge-panel
+  .content-panel
+  .content-panel-desc
+  .expire {
   font-size: 11px;
   color: #333;
   font-family: 'Poppins-bold' !important;
   display: block;
 }
 #reward-points-container
-.reward-point-merge-panel
-.content-panel
-.content-panel-desc
-.points {
+  .reward-point-merge-panel
+  .content-panel
+  .content-panel-desc
+  .points {
   font-size: 11px;
   padding-top: 2px;
   margin-bottom: -2px;
@@ -242,10 +277,10 @@ img {
   text-transform: uppercase;
 }
 #reward-points-container
-.reward-point-merge-panel
-.content-panel
-.content-panel-desc
-.button {
+  .reward-point-merge-panel
+  .content-panel
+  .content-panel-desc
+  .button {
   margin: 0;
   line-height: 20px;
   letter-spacing: 2px;
@@ -259,10 +294,10 @@ img {
   bottom: 5px;
 }
 #reward-points-container
-.reward-point-merge-panel
-.content-panel
-.content-panel-desc
-.button.disable {
+  .reward-point-merge-panel
+  .content-panel
+  .content-panel-desc
+  .button.disable {
   color: #b1b1b1;
 }
 #reward-points-container .bold-title.dd {
@@ -308,18 +343,18 @@ img {
     width: 98%;
   }
   #reward-points-container
-  .reward-point-merge-panel
-  .content-panel
-  .content-panel-desc
-  .button {
+    .reward-point-merge-panel
+    .content-panel
+    .content-panel-desc
+    .button {
     position: relative;
     margin-top: 10px;
     margin-bottom: 10px;
   }
   #reward-points-container
-  .reward-point-merge-panel
-  .content-panel
-  .content-panel-desc {
+    .reward-point-merge-panel
+    .content-panel
+    .content-panel-desc {
     padding-left: 0px;
     padding-top: 10px;
   }
@@ -341,4 +376,3 @@ img {
     margin-bottom: 30px;
   }
 }
-
