--- a/src/components/rewards/rewards.css
+++ b/src/components/rewards/rewards.css
@@ -15,7 +15,7 @@
   width: 30% !important;
   border: 1px solid #e4e4e4;
   height: inherit;
-  align-items: flex-start;
+  align-items: center;
 }
 .choose-reward .apply-reward {
   display: flex !important;
@@ -26,17 +26,21 @@
 }
 .choose-reward .choose-btn .align-item {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
+  margin: 0;
+  width: 100%;
 }
 .choose-reward .choose-btn .icon-content {
-  align-items: center;
-  display: -webkit-box;
+  align-items: flex-start;
+  flex-direction: column;
+  display: flex;
   min-height: 25px;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
   line-height: 1.3;
+  padding-left: 10px;
 }
 .choose-reward .choose-btn p {
   font-size: 18px !important;
@@ -63,8 +67,8 @@
   left: 50%;
   top: 50%;
   transform: rotate(45deg);
-  margin-top: -4%;
-  margin-left: -30.8%;
+  margin-top: -7%;
+  margin-left: -29.8%;
 }
 .choose-reward .choose-btn.Mui-selected:before {
   content: ' ';
@@ -74,9 +78,9 @@
   height: 0px;
   width: 0px;
   position: absolute;
-  left: 50%;  
+  left: 50%;
   top: 50%;
-  margin-top: -8%;
+  margin-top: -11%;
   margin-left: -37%;
 }
 .choose-reward .choose-btn .apply-button {
@@ -142,13 +146,13 @@
     min-height: 72px;
   }
   .choose-reward .choose-btn.Mui-selected:before {
-    margin-top: -11%;
-    margin-left: 24%;
+    margin-top: -7%;
+    margin-left: 29%;
     border: solid 30px #0073bd;
   }
   .choose-reward .choose-btn.Mui-selected:after {
-    margin-top: -7%;
-    margin-left: 32%;
+    margin-top: -5%;
+    margin-left: 34%;
     width: 11px;
     height: 26px;
   }
