--- a/src/pages/reward-new/index.css
+++ b/src/pages/reward-new/index.css
@@ -59,6 +59,7 @@
   padding: 10px;
   box-sizing: border-box;
   height: 100%;
+  min-height: 130px;
 }
 #reward-points-container a {
   text-decoration: none;
@@ -68,6 +69,8 @@
 #reward-points-container .reward-point-merge-panel .content-panel {
   align-content: stretch;
   text-align: left;
+  height: 100%;
+  align-items: flex-start;
 }
 #reward-points-container
   .reward-point-merge-panel
@@ -83,7 +86,10 @@
   .content-panel-desc {
   padding-left: 15px;
   position: relative;
-  height: inherit;
+  height: 100%;
+  justify-content: space-between;
+  display: flex;
+  flex-direction: column;
 }
 #reward-points-container
   .reward-point-merge-panel
@@ -104,7 +110,7 @@
   color: #333;
   font-family: 'Poppins-bold' !important;
   display: block;
-  padding: 3px 0px 10px 0px;
+  padding: 3px 0px 5px 0px;
 }
 #reward-points-container
   .reward-point-merge-panel
@@ -113,7 +119,7 @@
   .points {
   font-size: 11px;
   padding-top: 2px;
-  margin-bottom: -2px;
+  margin-bottom: 2px;
   color: #333;
   font-family: 'Poppins-bold' !important;
   text-transform: uppercase;
@@ -175,6 +181,10 @@
   padding-bottom: 15px;
 }
 @media screen and (max-width: 1199px) {
+  #reward-points-container .reward-point-merge-panel .content-panel {
+    height: 100%;
+    align-content: space-between;
+  }
   #reward-points-container .reward-point-merge-panel {
     height: 100%;
   }
@@ -192,6 +202,7 @@
     .content-panel-desc {
     padding-left: 0px;
     padding-top: 10px;
+    height: auto;
   }
 }
 @media screen and (max-width: 640px) {
