--- a/src/pages/product/product.css
+++ b/src/pages/product/product.css
@@ -464,6 +464,7 @@ input[type='check']:checked+label {
   display: flex;
   height: 100%;
   overflow: hidden;
+  margin: 0;
 }
 
 .product-detail .menu-items .content-panel.selected .card-panel .name-img-panel .name-panel {
@@ -471,7 +472,7 @@ input[type='check']:checked+label {
 }
 
 .product-detail .menu-items .content-panel .card-panel .name-img-panel .name-panel {
-  padding-left: 16px;
+  padding-left: 12px;
   color: #2b4b62;
 }
 
