--- a/src/pages/reward-new/index.css
+++ b/src/pages/reward-new/index.css
@@ -12,6 +12,13 @@
   margin-bottom: 45px;
   box-sizing: border-box;
 }
+.body-text-bold {
+  font-size: 16px !important;
+  font-family: 'Poppins-Bold', sans-serif !important;
+  color: #414141;
+  padding-top: 8px;
+  padding-bottom: 20px;
+}
 #reward-points-container hr {
   border: none;
   border-top: 1px solid #ccc;
