--- a/src/pages/reward-new/index.css
+++ b/src/pages/reward-new/index.css
@@ -12,12 +12,22 @@
   margin-bottom: 45px;
   box-sizing: border-box;
 }
-.body-text-bold {
+.body-text-bold-reward {
   font-size: 16px !important;
   font-family: 'Poppins-Bold', sans-serif !important;
   color: #414141;
   padding-top: 8px;
   padding-bottom: 20px;
+}
+
+.body-text-bold-redeem {
+  font-size: 16px !important;
+  font-family: 'Poppins-Bold', sans-serif !important;
+  color: #414141;
+  padding-bottom: 20px;
+}
+.body-text-bold-redeem.disable {
+  color: #91a6b2;;
 }
 #reward-points-container hr {
   border: none;
