--- a/src/components/order-details/order-details.css
+++ b/src/components/order-details/order-details.css
@@ -27,7 +27,21 @@
   height: 1px;
 }
 
-
+.help-icon {
+  border-radius: 20px;
+  width: 18px;
+  height: 18px;
+  border: 1px solid #2b4b62;
+  text-align: center;
+  display: inline-block;
+  font-family: 'Poppins-Medium', sans-serif !important;
+  font-size: 14px;
+  margin-left: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
 
 @media screen and (max-width: 900px) {
   .order-details-confirmation {
