--- a/src/pages/check-in/check-in.css
+++ b/src/pages/check-in/check-in.css
@@ -1,20 +1,26 @@
 .check-in-section .MuiGrid-grid-xs-12{
-  padding-top: 20px
+  padding-top: 5px
 }
 .check-in-section img {
-  width: 100%;
+  width: 80%;
   height: auto;
 }
 .receipt-image-box
 {
   justify-content: center;
+  padding-top: 20px !important;
 }
 .body-text
 {
-  font-size: 12px !important;
+  font-size: 14px !important;
   font-family: 'Poppins-Medium', sans-serif !important;
   color: #414141;
-  padding-top: 8px;
+  padding-top: 14px;
+}
+
+.checkin-field input {
+  padding-bottom: 12px !important;
+  padding-top: 12px !important;
 }
 
 
