--- a/src/index.css
+++ b/src/index.css
@@ -134,7 +134,7 @@ button {
 }
 
 .selected-btn.Mui-selected {
-  background: #0075EF !important;
+  background: #0075BF !important;
   color: white !important;
 }
 
