--- a/src/pages/forgot-password/forgot.css
+++ b/src/pages/forgot-password/forgot.css
@@ -133,7 +133,7 @@
   letter-spacing: 1.5px !important;
   display: inline-block;
   text-align: left;
-  background: url('../../assets/imgs/fb-icon.png');
+  background: url('../../assets/imgs/fb-icon-2.png');
   background-position: 15px 12px;
   background-repeat: no-repeat;
   cursor: pointer;
