--- a/src/pages/product/product.css
+++ b/src/pages/product/product.css
@@ -264,6 +264,7 @@ input[type='check']:checked+label {
 
   .product-detail .action-panel .content-panel {
     justify-content: center;
+    align-items: center;
   }
 
   .product-detail h5 {
@@ -321,7 +322,7 @@ input[type='check']:checked+label {
 
   .button-panel-sx {
     width: 340px;
-    margin-bottom: 20px;
+    /*margin-bottom: 20px;*/
     justify-content: flex-end;
   }
 
@@ -347,7 +348,7 @@ input[type='check']:checked+label {
   .product-detail .quantity input, .product-detail .quantity button {
     height: 25px !important;
     min-width: 23px !important;
-    font-size: 20px;
+    font-size: 13px;
   }
   .quantity-label {
     display: inline;
