RW-875,RW-873,RW-871,RW-876,RW-861,RW-860

--- a/src/components/cart/upsells/others/index.css
+++ b/src/components/cart/upsells/others/index.css
@@ -163,7 +163,7 @@
     .name-img-panel
     .name-panel {
       padding-left: 0px !important;
-      padding-top: 15px;
+      padding-top: 23px;
       overflow-wrap: break-word;
       text-align: center;
       font-size: 15px;
@@ -190,7 +190,7 @@
     .name-img-panel
     .name-panel {
       padding-left: 0px !important;
-      padding-top: 25px;
+      /* padding-top: 0px; */
       overflow-wrap: break-word;
       text-align: center;
       font-size: 14px;
@@ -222,8 +222,81 @@
     }
   }
 
-  @media screen and (max-width: 468px) {
-    .upsells .content-panel {
-      flex-direction: column;
+  @media screen and (max-width: 600px) {
+    .upsells
+    .content-panel
+    .card-panel
+    .name-img-panel
+    .name-panel {
+      padding-left: 0px !important;
+      padding-top: 30px;
+      overflow-wrap: break-word;
+      text-align: center;
+      font-size: 14px;
+    }
+    .upsells
+    .content-panel
+    .card-panel
+    .name-img-panel
+    .item-image {
+      width: 65% !important;
+      display: block;
+      margin: 0px 0px 0px 20px !important;
+    }
+    #cart-box-upsells {
+      top: 0;
+      right: 0;
+      width: 100%;
+      border: 1px solid #666;
+      height: 100%;
+      z-index: 9999;
+      position: fixed;
+      background: #fff;
+      border-top: 0;
+      border-right: 0;
+      margin: 0px;
+    }
+    .upsells .content-panel .card-panel.card-item {
+      max-height: 100% !important;
     }
   }
+
+  @media screen and (max-width: 400px) {
+    .upsells
+    .content-panel
+    .card-panel
+    .name-img-panel
+    .name-panel {
+      padding-left: 0px !important;
+      padding-top: 20px;
+      /* overflow-wrap: break-word; */
+      text-align: center;
+      font-size: 14px;
+    }
+    .upsells
+    .content-panel
+    .card-panel
+    .name-img-panel
+    .item-image {
+      width: 75% !important;
+      display: block;
+      margin: 0px 0px 0px 20px !important;
+    }
+    #cart-box-upsells {
+      top: 0;
+      right: 0;
+      width: 100%;
+      border: 1px solid #666;
+      height: 100%;
+      z-index: 9999;
+      position: fixed;
+      background: #fff;
+      border-top: 0;
+      border-right: 0;
+      margin: 0px;
+    }
+    .upsells .content-panel .card-panel.card-item {
+      max-height: 100% !important;
+    }
+  }
+
