--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -46,7 +46,6 @@
     font-size: 28px;
   }
   .sign-up-section .MuiSelect-select {
-    max-width: 195px !important;
+    /* max-width: 195px !important; */
   }
 }
-
