--- a/src/pages/order-confirmation/order-confirmation.css
+++ b/src/pages/order-confirmation/order-confirmation.css
@@ -47,7 +47,19 @@ h6.white {
   left: 50%;
   margin-left: -165px;
 }
-
+@media screen and (max-width: 1200px){
+.order-confirmation .MuiPaper-root {
+  padding: 95px;
+  min-height: 410px;
+  max-height: 610px;
+}
+.order-confirmation .phone-icon {
+  position: absolute;
+  bottom: 0;
+  left: 60%;
+  margin-left: -165px;
+}
+}
 @media screen and (max-width: 900px) {
   .order-confirmation .card {
     padding: 55px 30px 65px;
@@ -62,7 +74,7 @@ h6.white {
   .order-confirmation .card.next-order {
     background-image: none !important;
     max-height: 435px;
-    min-height: 435px;
+    min-height: 515px;
   }
   .order-confirmation .card.next-order .earn-reward {
     flex-basis: 50% !important;
