--- a/src/components/cart/upsells/others/index.css
+++ b/src/components/cart/upsells/others/index.css
@@ -31,7 +31,7 @@
   .name-img-panel
   .name-panel {
     padding-left: 15px !important;
-    padding-top: 23px;
+    /* padding-top: 23px; */
     overflow-wrap: break-word;
     text-align: left;
     font-size: 16px;
@@ -66,7 +66,7 @@
 }
   .upsells .content-panel .card-panel.card-item {
     min-height: 90px;
-    max-height: 90px;
+    /* max-height: 90px; */
   }
   .upsells .content-panel .card-panel.card-item .check-mark {
     top: 18px !important;
@@ -138,7 +138,7 @@
 .item-image {
   width: 85% !important;
   display: block;
-  margin: -9px 0px 12px 12px;
+  /* margin: -9px 0px 12px 12px; */
 }
 
 .upsells .content-panel .card-panel .name-img-panel .name-panel select {
@@ -163,7 +163,7 @@
     .name-img-panel
     .name-panel {
       padding-left: 0px !important;
-      padding-top: 23px;
+      /* padding-top: 23px; */
       overflow-wrap: break-word;
       text-align: center;
       font-size: 15px;
@@ -229,7 +229,7 @@
     .name-img-panel
     .name-panel {
       padding-left: 0px !important;
-      padding-top: 30px;
+      /* padding-top: 30px; */
       overflow-wrap: break-word;
       text-align: center;
       font-size: 14px;
@@ -268,7 +268,7 @@
     .name-img-panel
     .name-panel {
       padding-left: 0px !important;
-      padding-top: 20px;
+      /* padding-top: 20px; */
       /* overflow-wrap: break-word; */
       text-align: center;
       font-size: 14px;
