--- a/src/components/register-form/register-form.css
+++ b/src/components/register-form/register-form.css
@@ -23,3 +23,30 @@
   margin: 5px 10px 0px 0px;
   outline: none;
 }
+
+#select-multiple-native {
+  max-height: 90px;
+  padding: 5px 15px;
+}
+
+.sign-up-section .body-text-fav-error {
+  color: #E61F00 !important;
+  font-size: 14px !important;
+  font-family: 'Poppins-Regular', sans-serif !important;
+  padding-top: 8px;
+}
+.sign-up-section .fav-error-message {
+  padding: 0;
+  font-family: "Roboto","Helvetica","Arial",sans-serif;
+  font-weight: 400;
+  font-size: 0.75rem;
+  line-height: 1.66;
+  letter-spacing: 0.03333em;
+  text-align: left;
+  margin-top: 3px;
+  margin-right: 14px;
+  margin-bottom: 0;
+  margin-left: 14px;
+  color: #E61F00 !important;
+}
+
