--- a/src/pages/product/product.css
+++ b/src/pages/product/product.css
@@ -189,7 +189,7 @@ input[type='check']:checked+label {
 
   .product-detail .menu-items .content-panel .card-panel .name-img-panel {
     align-items: flex-start !important;
-    margin-left: -5px !important;
+    /*margin-left: -5px !important;*/
   }
 
   .product-detail .menu-items .content-panel .card-panel {
@@ -237,7 +237,7 @@ input[type='check']:checked+label {
   margin-top: 8px;
   border: 2px solid #ddd;
   padding: 6px 8px;
-  width: 94%;
+  width: 100%;
   box-sizing: border-box;
   border-radius: 10px;
   font-family: 'Poppins-Medium';
@@ -358,7 +358,7 @@ input[type='check']:checked+label {
   }
   .product-detail .add-to-bag {
     width: 300px;
-    font-size: 13px; 
+    font-size: 13px;
   }
 
   .quantity-label {
@@ -402,7 +402,7 @@ input[type='check']:checked+label {
   }
 
   .product-detail .action-panel {
-   padding: 20px 5px; 
+   padding: 20px 5px;
     box-shadow: 0px 0px 10px rgb(0 0 0 / 20%);
   }
 
@@ -536,7 +536,7 @@ input[type='check']:checked+label {
 
 .product-detail .menu-items .content-panel.selected .card-panel.no-image-class .name-img-panel .name-panel {
   color: #0073BD;
-  margin-left: -103px;
+  /*margin-left: -103px;*/
   position: inherit;
 }
 
