--- a/src/components/iframe/register-form/register-form.css
+++ b/src/components/iframe/register-form/register-form.css
@@ -42,3 +42,18 @@
 .css-1wc848c-MuiFormHelperText-root.Mui-error {
   background-color: transparent !important;
 }
+
+.fav-iframes-error-message {
+  padding: 0;
+  font-family: "Roboto","Helvetica","Arial",sans-serif;
+  font-weight: 400;
+  font-size: 0.75rem;
+  line-height: 1.66;
+  letter-spacing: 0.03333em;
+  text-align: left;
+  margin-top: 3px;
+  margin-right: 14px;
+  margin-bottom: 0;
+  margin-left: 14px;
+  color: #E61F00 !important;
+}
