--- a/src/components/personal-info/index.css
+++ b/src/components/personal-info/index.css
@@ -47,3 +47,18 @@
 #fav-location {
   white-space: normal;
 }
+
+.fav-Profile-error-message {
+  padding: 0;
+  font-family: "Roboto","Helvetica","Arial",sans-serif;
+  font-weight: 400;
+  font-size: 0.75rem;
+  line-height: 1.66;
+  letter-spacing: 0.03333em;
+  text-align: left;
+  margin-top: 3px;
+  margin-right: 14px;
+  margin-bottom: 0;
+  margin-left: 14px;
+  color: #E61F00 !important;
+}
