--- a/src/pages/order-confirmation/order-confirmation.css
+++ b/src/pages/order-confirmation/order-confirmation.css
@@ -31,7 +31,8 @@ h6.white {
   line-height: 0 !important;
 }
 .order-confirmation fieldset {
-  border: none;
+  border: none !important;
+  box-shadow: none !important;
 }
 .order-confirmation .card {
   background-color: #2b4b62;
@@ -52,7 +53,7 @@ h6.white {
 .order-confirmation .MuiPaper-root {
   padding: 95px;
   min-height: 410px;
-  max-height: 740px;
+  max-height: 780px;
 }
 .order-confirmation .phone-icon {
   position: absolute;
@@ -75,7 +76,7 @@ h6.white {
   .order-confirmation .card.next-order {
     background-image: none !important;
     max-height: 435px;
-    min-height: 640px;
+    min-height: 660px;
   }
   .order-confirmation .card.next-order .earn-reward {
     flex-basis: 50% !important;
@@ -108,7 +109,7 @@ h6.white {
 @media screen and (max-width: 468px) {
   .order-confirmation .card.next-order {
     max-height: 890px;
-    min-height: 920px;
+    min-height: 930px;
   }
   .order-confirmation .order-info {
     padding: 45px 30px 55px;
