--- a/src/components/register-form/register-form.css
+++ b/src/components/register-form/register-form.css
@@ -56,9 +56,10 @@
 }
 #react-select-3-input{
   height: auto;
-  padding: 0px 0px 0px 8px !important;
-  color: black !important;
-  font: message-box !important;
+  padding: 0px 0px 0px 7px !important;
+  /* color: black !important; */
+  caret-color: black !important;
+  /* font: message-box !important; */
 }
 
 .css-1jwi8f4-singleValue {
