--- a/src/components/register-confirmation/register-confirmation.css
+++ b/src/components/register-confirmation/register-confirmation.css
@@ -22,6 +22,7 @@
   padding: 16px 14px;
   margin: 0px 5px 10px 0px;
   outline: none;
+  caret-color: black !important;
 }
 .confirmation-form .react-date-inputs input:before {
   width: 20px;
@@ -94,9 +95,8 @@
 }
 #react-select-3-input{
   height: auto;
-  padding: 0px 0px 0px 8px !important;
-  color: black !important;
-  font: message-box !important;
+  padding: 0px 0px 0px 7px !important;
+  caret-color: black !important;
 }
 
 .css-1jwi8f4-singleValue {
