--- a/src/components/register-form/register-form.css
+++ b/src/components/register-form/register-form.css
@@ -59,6 +59,7 @@
   height: auto;
   padding: 0px 0px 0px 7px !important;
   caret-color: black !important;
+  line-height: 10px;
 }
 
 .css-1jwi8f4-singleValue {
