--- a/src/components/cart/upsells/upsells.css
+++ b/src/components/cart/upsells/upsells.css
@@ -10,7 +10,7 @@
 .upsells-details .quantity input,
 .upsells-details .quantity button {
   height: 30px !important;
-  padding: 0px 5px !important;
+  /* padding: 0px 5px !important; */
   background: transparent;
   box-shadow: none;
   min-width: 26px;
@@ -35,4 +35,40 @@
 }
 .upsells-details .quantity fieldset {
   box-shadow: none !important;
+}
+@media screen and (max-width: 468px) {
+  .input-quantity {
+    width: 40px !important;
+}
+  #quantity-label-id {
+    font-size: 16px !important;
+}
+  .upsells-details .quantity {
+    margin: 0;
+    width: 120px;
+    margin-right: 5px;
+}
+.upsells-details .quantity input {
+  text-align: center;
+  color: #0069aa;
+  font-weight: Bold;
+  border-left: 1px solid #e4e4e4;
+  border-right: 1px solid #e4e4e4;
+  border-top: none;
+  border-bottom: none;
+}
+.upsells-details .quantity button {
+  font-family: 'Poppins-Regular' !important;
+  color: #414141;
+  font-weight: normal;
+}
+  .upsells-details .quantity input, .upsells-details .quantity button {
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    height: 55px !important;
+    min-width: 25px !important;
+    font-size: 22px;
+    padding: 0px !important;
+  }
 }
