--- a/src/index.css
+++ b/src/index.css
@@ -375,6 +375,21 @@ fieldset {
   font-family: 'Poppins-Regular', sans-serif;
 }
 
+.product-label {
+  position: absolute;
+  color: #ffffff;
+  top: 20px;
+  left: 10px;
+  text-align: center;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  background: #000000;
+  width: 50%;
+  font-size: 14px !important;
+  font-family: Poppins-Medium, serif !important;
+  letter-spacing: 0.2px !important;
+}
+
 @media screen and (min-width: 600px) {
   .css-zv4r1b {
     width: 170px !important;
