--- a/src/components/product-listing-carousel/index.css
+++ b/src/components/product-listing-carousel/index.css
@@ -34,12 +34,15 @@ overflow:unset;
 
 .react-multi-carousel-list.carousel-container  button.react-multiple-carousel__arrow--left,
 .react-multi-carousel-list.carousel-container  button.react-multiple-carousel__arrow--right {
-  background: white !important;
+  background: #2b4b62 !important;
+  border-radius: 30px !important;
+  width: 50px;
+  height: 50px;
 }
 .react-multi-carousel-list.carousel-container  button.react-multiple-carousel__arrow--left:before,
 .react-multi-carousel-list.carousel-container  button.react-multiple-carousel__arrow--right:before {
-  color: #6AC0BD !important;
-  font-size: 32px;
+  color: white !important;
+  font-size: 38px;
   font-weight: bold;
 }
 
