--- a/src/index.css
+++ b/src/index.css
@@ -379,15 +379,17 @@ fieldset {
   position: absolute;
   color: #ffffff;
   top: 20px;
-  left: 10px;
+  margin-left: 10px !important;
   text-align: center;
   padding-top: 5px;
   padding-bottom: 5px;
-  background: #000000;
-  width: 50%;
+  background: #0075BF;
+  border: 2px solid #0075BF;
+  border-radius: 80px;
+  width: 40%;
   font-size: 14px !important;
   font-family: Poppins-Medium, serif !important;
-  letter-spacing: 0.2px !important;
+  letter-spacing: 0.3px !important;
 }
 
 @media screen and (min-width: 600px) {
