--- a/src/components/location/location.css
+++ b/src/components/location/location.css
@@ -92,6 +92,7 @@
   color: #0075BF;
   font-family: Poppins-Medium !important;
   font-size: 14px !important;
+  padding-bottom: 10px;
 }
 
 @media screen and (max-width: 2200) {
