--- a/src/pages/checkout/checkout.css
+++ b/src/pages/checkout/checkout.css
@@ -30,7 +30,7 @@
   width: calc(100% - 8px);
 }
 .order .right-col .time-slot-selected {
-  background: #79C043;
+  background: #0075BF;
   margin-top: 10px;
   width: calc(100% - 8px);
 }
