--- a/src/components/recent-orders/index.css
+++ b/src/components/recent-orders/index.css
@@ -19,7 +19,10 @@
   display: block;
   margin-bottom: -2px;
 }
-
+.order-detail-rpanel {
+  flex-basis: 100%;
+  max-width: 100%;
+}
 .order-history-card .card-panel .order-name {
   font-size: 20px;
   font-family: 'Poppins-Medium', sans-serif !important;
