--- a/src/components/sign-up-guest/index.css
+++ b/src/components/sign-up-guest/index.css
@@ -31,7 +31,7 @@
 
 .body-text-signup {
     font-size: 12px;
-    font-family: 'Poppins-Medium', sans-serif !important;
+    font-family: 'Poppins-Regular', sans-serif !important;
     color: #414141;
     padding-top: 3px;
   }
