--- a/src/components/iframe/product-listing/index.css
+++ b/src/components/iframe/product-listing/index.css
@@ -9,12 +9,21 @@
 .react-multi-carousel-list {
   /* overflow: scroll !important; */
 }
-.react-multi-carousel-list.carousel-container  button.react-multiple-carousel__arrow--left,
+.react-multi-carousel-list.carousel-container  button.react-multiple-carousel__arrow--left {
+  background: #2b4b62 !important;
+  border-radius: 30px !important;
+  width: 50px;
+  height: 50px;
+  padding-top: 1.75px;
+  padding-right: 3px;
+}
 .react-multi-carousel-list.carousel-container  button.react-multiple-carousel__arrow--right {
   background: #2b4b62 !important;
   border-radius: 30px !important;
   width: 50px;
   height: 50px;
+  padding-top: 1.75px;
+  padding-left: 6px;
 }
 .react-multi-carousel-list.carousel-container  button.react-multiple-carousel__arrow--left:before,
 .react-multi-carousel-list.carousel-container  button.react-multiple-carousel__arrow--right:before {
