--- a/src/components/product-listing-carousel/index.css
+++ b/src/components/product-listing-carousel/index.css
@@ -18,6 +18,10 @@
 .react-multi-carousel-list {
   /*display: block !important;*/
 }
+.vertical-line{
+  border-left: 3px solid black;
+  height: 16px;
+}
 
 .carousel-container .title {
   min-height: 45px;
