--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -3,7 +3,7 @@
         width: 100%;
         display: grid;
         list-style: none;
-        grid-template-columns: auto auto auto auto auto auto auto auto;
+        grid-template-columns: auto auto auto;
         padding-left: 10px;
         /* padding-left: -webi; */
         text-align: -webkit-left;
