--- a/src/components/order-details/order-details.css
+++ b/src/components/order-details/order-details.css
@@ -15,9 +15,9 @@
   margin: 0px auto 0px auto !important;
 }
 .order-details h6 {
-  font-family: 'Poppins-Bold', sans-serif !Important;
+  font-family: 'sunbornsans_one'!important;
   font-size: 16px !important;
-  color: #285169;
+  color: #58595b;
 }
 .order-details h6.n-bold {
   font-family: 'Poppins-Regular' !important;
