--- a/src/components/order-details/order-details.css
+++ b/src/components/order-details/order-details.css
@@ -15,12 +15,12 @@
   margin: 0px auto 0px auto !important;
 }
 .order-details h6 {
-  font-family: 'sunbornsans_one'!important;
+  /* font-family: 'sunbornsans_one'!important; */
   font-size: 16px !important;
   color: #58595b;
 }
 .order-details h6.n-bold {
-  font-family: 'Poppins-Regular' !important;
+  /* font-family: 'Poppins-Regular' !important; */
 }
 .order-details hr {
   background: #285169;
