--- a/src/components/tip/tip.css
+++ b/src/components/tip/tip.css
@@ -2,7 +2,7 @@
   min-width: 69px;
   width: 69px;
   height: 60px;
-  font-size: 16px;
+  font-size: 18pt;
   margin: 20px 18px 0px 0px !important;
 }
 .tip-wrapper .action-btn {
