--- a/src/components/tip/tip.css
+++ b/src/components/tip/tip.css
@@ -20,7 +20,7 @@
 }
 
 .tip-wrapper .action-btn .Mui-disabled {
-  background: #d3d3d3;
+  background:   #0075BF;
 }
 
 @media screen and (max-width: 900px) {
