--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,9 @@
 .libre-franklinlight {
   font-family: 'libre_franklinlight' !important;
 }
-
+.libre-franklin {
+  font-family: 'libre_franklin' !important;
+}
 .sunbornsans-one {
       font-family: 'sunbornsans_one' !important;
 }
