--- a/src/index.css
+++ b/src/index.css
@@ -411,7 +411,7 @@ fieldset {
 
 .taxes .text-info-title {
   line-height: 1.0;
-  font-family: 'Poppins-Medium', sans-serif;
+  font-family: '', sans-serif;
 }
 
 .taxes .text-info-desc {
