--- a/src/components/tip/tip.css
+++ b/src/components/tip/tip.css
@@ -14,7 +14,7 @@
   padding-left: 10px;
 }
 .tip-wrapper .action-btn button {
-  background: #214F66;
+  background: #062C43 ;
   color: white;
   height: 56px;
 }
