--- a/src/components/order-details/order-details.css
+++ b/src/components/order-details/order-details.css
@@ -15,7 +15,7 @@
   margin: 0px auto 0px auto !important;
 }
 .order-details h6 {
-  font-family: 'libre_franklin'!important;
+  /* font-family: 'libre_franklin'!important; */
   font-size: 16px !important;
   color: #58595b;
   font-weight: bold;
