--- a/src/pages/checkout/checkout.css
+++ b/src/pages/checkout/checkout.css
@@ -25,7 +25,7 @@
   letter-spacing: 1px !important;
 }
 .order .right-col .time-slot {
-  background: #214F66;
+  background: #062C43;
   margin-top: 10px;
   width: calc(100% - 8px);
 }
